tests/Rules/Aria/Fixtures/invalid/role_invalid.html.twig
<div role="marquee">Bad</div>
